FILE (GLOB_RECURSE SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE (engine ${SRC})

TARGET_COMPILE_DEFINITIONS (engine PUBLIC "_CRT_SECURE_NO_WARNINGS")

TARGET_INCLUDE_DIRECTORIES (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (engine PUBLIC Vulkan::Vulkan)
TARGET_LINK_LIBRARIES (engine PUBLIC imgui)
TARGET_LINK_LIBRARIES (engine PUBLIC stb)

TARGET_PRECOMPILE_HEADERS (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/pch.h")
